--- a/simpleskulpt.html
+++ b/simpleskulpt.html
@@ -30,7 +30,7 @@ body { margin:0; padding:0;}
 #right {
 	padding:20px;
 	box-sizing:border-box;
-	background-image:url('images/background.png');
+	background-image:url('../images/background.png');
 	background-color:'black';
 	background-size:cover;
 	width:100%;
